--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.0",
+    "@expo/metro-runtime": "~4.0.1",
     "@react-navigation/bottom-tabs": "^7.0.6",
     "@react-navigation/drawer": "^7.0.5",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.4",
     "@reduxjs/toolkit": "^2.3.0",
-    "expo": "^52.0.9",
-    "expo-status-bar": "~2.0.0",
+    "expo": "~52.0.28",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
-    "expo-splash-screen": "~0.29.18"
+    "expo-splash-screen": "~0.29.21"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
